[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "certbot-dns-cloudflare4"
version = "0.9"
description = "Cloudflare 4 DNS Authenticator plugin for Certbot"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Certbot Project", email = "certbot-dev@eff.org" },
    { name = "Phoenix591" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "cloudflare>=4.0, <6",
    "acme>=5.1.0",
    "certbot>=5.1.0",
]
[project.optional-dependencies]
docs = [
    "Sphinx>=1.0", # autodoc_member_order = 'bysource', autodoc_default_flags
    "sphinx_rtd_theme",
]

[project.entry-points."certbot.plugins"]
dns-cloudflare4 = "certbot_dns_cloudflare4._internal.dns_cloudflare4:Authenticator"

[project.urls]
Homepage = "https://github.com/certbot/certbot"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
